# spatius-sdk-python

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  test-local.sh  tox.ini
.github/workflows/: publish-testpypi.yml  publish.yml  test.yml
benchmarks/: bench_ogg_opus_encoder.py
examples/connection_pool/: README.md  main.py
examples/http_service/: Dockerfile  main.py
examples/single_audio_clip/: main.py
proto/: buf.gen.yaml  message.proto
src/avatarkit/: audio_encoder.py
src/spatius/: __init__.py  audio_encoder.py  avatar_session.py  errors.py  logid.py  session_config.py
src/spatius_sdk_python/: __init__.py
tests/: test_audio_encoder.py  test_avatar_session_v2.py  test_connection_pool.py  test_e2e_errors.py  test_e2e_request.py  test_public_package.py
tests/fixtures/audio/: audio.pcm  audio_16000.pcm  audio_22050.pcm  audio_24000.pcm  audio_32000.pcm  audio_44100.pcm  audio_48000.pcm  audio_8000.pcm
